Introduce reference immutability to various codec types in order to allow for safe multithreaded execution